// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PureInboxScreen Default 1`] = `
<storybook-wrapper>
  <app-pure-inbox-screen>
    
    
    <div
      class="page lists-show"
    >
      <nav>
        <h1
          class="title-page"
        >
          <span
            class="title-wrapper"
          >
            Taskbox
          </span>
        </h1>
      </nav>
      <app-task-list>
        <app-pure-task-list
          ng-reflect-tasks="[object Object],[object Object"
        >
          <div
            class="list-items"
          >
            
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="list-item TASK_INBOX"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  
                  <a>
                    <span
                      class="icon-star"
                    />
                  </a>
                </div>
              </div>
            </app-task>
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="list-item TASK_INBOX"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  
                  <a>
                    <span
                      class="icon-star"
                    />
                  </a>
                </div>
              </div>
            </app-task>
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="list-item TASK_INBOX"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  
                  <a>
                    <span
                      class="icon-star"
                    />
                  </a>
                </div>
              </div>
            </app-task>
            <app-task
              ng-reflect-task="[object Object]"
            >
              <div
                class="list-item TASK_INBOX"
              >
                <label
                  class="checkbox"
                >
                  <input
                    disabled="true"
                    name="checked"
                    type="checkbox"
                  />
                  <span
                    class="checkbox-custom"
                  />
                </label>
                <div
                  class="title"
                >
                  <input
                    placeholder="Input title"
                    readonly="true"
                    type="text"
                  />
                </div>
                <div
                  class="actions"
                >
                  
                  <a>
                    <span
                      class="icon-star"
                    />
                  </a>
                </div>
              </div>
            </app-task>
            
            
          </div>
        </app-pure-task-list>
      </app-task-list>
    </div>
  </app-pure-inbox-screen>
</storybook-wrapper>
`;

exports[`Storyshots PureInboxScreen Error 1`] = `
<storybook-wrapper>
  <app-pure-inbox-screen
    ng-reflect-error="true"
  >
    
    <div
      class="page lists-show"
    >
      <div
        class="wrapper-message"
      >
        <span
          class="icon-face-sad"
        />
        <div
          class="title-message"
        >
          Oh no!
        </div>
        <div
          class="subtitle-message"
        >
          Something went wrong
        </div>
      </div>
    </div>
    
  </app-pure-inbox-screen>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent Default 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-pure-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        
        
      </div>
    </app-pure-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent Empty 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-pure-task-list
      ng-reflect-loading="false"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        <div
          class="wrapper-message"
        >
          <span
            class="icon-check"
          />
          <div
            class="title-message"
          >
            You have no tasks
          </div>
          <div
            class="subtitle-message"
          >
            Sit back and relax
          </div>
        </div>
        
      </div>
    </app-pure-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent Loading 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-pure-task-list
      ng-reflect-loading="true"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        
        <div>
          
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
          <div
            class="loading-item"
          >
            <span
              class="glow-checkbox"
            />
            <span
              class="glow-text"
            >
              <span>
                Loading
              </span>
              <span>
                cool
              </span>
              <span>
                state
              </span>
            </span>
          </div>
        </div>
      </div>
    </app-pure-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots PureTaskListComponent With Pinned Tasks 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-pure-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_PINNED"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        
        
      </div>
    </app-pure-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots Task Archived 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_ARCHIVED"
    >
      <label
        class="checkbox"
      >
        <input
          checked=""
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Default 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots Task Pinned 1`] = `
<storybook-wrapper>
  <app-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_PINNED"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-task>
</storybook-wrapper>
`;

exports[`Storyshots TaskList Default 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
      </div>
    </app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots TaskList Empty 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-task-list
      ng-reflect-loading="false"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        
        <div>
          empty
        </div>
        
      </div>
    </app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots TaskList Loading 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-task-list
      ng-reflect-loading="true"
      ng-reflect-tasks=""
    >
      <div
        class="list-items"
      >
        
        <div>
          loading
        </div>
        
        
      </div>
    </app-task-list>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<storybook-wrapper>
  <div
    style="margin: 3em"
  >
    <app-task-list
      ng-reflect-tasks="[object Object],[object Object"
    >
      <div
        class="list-items"
      >
        
        
        
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_INBOX"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
        <app-task
          ng-reflect-task="[object Object]"
        >
          <div
            class="list-item TASK_PINNED"
          >
            <label
              class="checkbox"
            >
              <input
                disabled="true"
                name="checked"
                type="checkbox"
              />
              <span
                class="checkbox-custom"
              />
            </label>
            <div
              class="title"
            >
              <input
                placeholder="Input title"
                readonly="true"
                type="text"
              />
            </div>
            <div
              class="actions"
            >
              
              <a>
                <span
                  class="icon-star"
                />
              </a>
            </div>
          </div>
        </app-task>
      </div>
    </app-task-list>
  </div>
</storybook-wrapper>
`;
